--- a/src/main/res/layout/auth_login.xml
+++ b/src/main/res/layout/auth_login.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Let's sign you in."
-            android:textSize="35dp"
+            android:textSize="35sp"
             android:textStyle="bold"
             android:textColor="@color/text_regular"
             android:layout_marginBottom="50dp" />
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:textColor="@color/text_small" />
 
         <EditText
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Password"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:textColor="@color/text_small" />
 
         <EditText
@@ -56,7 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/text_small"
-            android:layout_marginBottom="30dp" />
+            android:layout_marginBottom="30dp"
+            android:inputType="textPassword"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -70,7 +71,7 @@
                 android:layout_height="match_parent"
                 android:background="#00000000"
                 android:text="Sign In"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textColor="@color/background" />
 
         </LinearLayout>
@@ -85,7 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Don't have an account?  "
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="@color/text_small" />
 
             <TextView
@@ -93,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Register"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="@color/text_regular"
                 android:textStyle="bold" />
 
