--- a/src/main/res/layout/auth_register.xml
+++ b/src/main/res/layout/auth_register.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Create your account."
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:textColor="@color/text_regular"
             android:layout_gravity="center"
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Username"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:textColor="@color/text_small" />
 
         <EditText
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:textColor="@color/text_small" />
 
         <EditText
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Password"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:textColor="@color/text_small" />
 
         <EditText
@@ -70,7 +70,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/text_small"
-            android:layout_marginBottom="30dp" />
+            android:layout_marginBottom="30dp"
+            android:inputType="textPassword"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -98,7 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Already have an account?  "
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="@color/text_small" />
 
             <TextView
@@ -106,7 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Login"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="@color/text_regular"
                 android:textStyle="bold" />
 
