--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="text_regular">#2B2D42</color>
     <color name="text_small">#8D99AE</color>
     <color name="text_highlight">#EF233C</color>
+    <color name="transparent">#00000000</color>
 </resources>
