--- a/src/main/res/layout/main_create_group.xml
+++ b/src/main/res/layout/main_create_group.xml
@@ -104,10 +104,10 @@
 
             <ListView
                 android:id="@+id/username_search_lv"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scrollbars="none"/>
+                android:scrollbars="none" />
 
         </LinearLayout>
 
