--- a/src/main/res/layout/group_members_or_search_item.xml
+++ b/src/main/res/layout/group_members_or_search_item.xml
@@ -3,16 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     android:background="@color/transparent">
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:padding="8dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:padding="5dp"
         android:src="@drawable/default_user_icon"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="10dp"/>
 
     <TextView
         android:id="@+id/username_et"
