--- a/src/main/res/layout/main_groups_listview_item.xml
+++ b/src/main/res/layout/main_groups_listview_item.xml
@@ -1,17 +1,18 @@
 <!-- custom_list_item.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/group_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     android:background="@color/transparent">
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/default_group_icon"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="10dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
         android:layout_gravity="center">
 
         <TextView
+            android:id="@+id/group_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Group Name"
