--- a/src/main/res/layout/main_create_group.xml
+++ b/src/main/res/layout/main_create_group.xml
@@ -114,6 +114,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/group_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="New Group"
