--- a/src/main/res/layout/task_listview_item.xml
+++ b/src/main/res/layout/task_listview_item.xml
@@ -11,16 +11,12 @@
 
     <LinearLayout
         android:id="@+id/finish_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@drawable/layout_task_btn_bg"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="20dp">
-
-        <View
-            android:id="@+id/finish_btn_empty"
-            android:layout_width="30dp"
-            android:layout_height="30dp"/>
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal">
 
     </LinearLayout>
 
