--- a/src/main/res/layout/main_create_tasks.xml
+++ b/src/main/res/layout/main_create_tasks.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="50dp">
+            android:layout_marginBottom="30dp">
 
             <ImageButton
                 android:id="@+id/return_btn"
@@ -107,7 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="50dp">
+                android:layout_marginBottom="30dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -132,7 +132,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="40dp">
+                android:layout_marginBottom="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -157,7 +157,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="35dp">
+                android:layout_marginBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -172,14 +172,15 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     tools:listitem="@layout/spinner_text"
-                    android:layout_marginRight="-55dp"/>
+                    android:layout_marginRight="-56dp"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -194,7 +195,39 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     tools:listitem="@layout/spinner_text"
-                    android:layout_marginRight="-55dp"/>
+                    android:layout_marginRight="-56dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Category"
+                    android:textSize="16sp"
+                    android:textColor="@color/text_small"
+                    android:layout_weight="1"/>
+
+                <View
+                    android:id="@+id/select_color"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@color/text_small"
+                    android:layout_marginRight="5dp"/>
+
+                <TextView
+                    android:id="@+id/select_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="None"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/text_regular" />
 
             </LinearLayout>
 
@@ -257,6 +290,132 @@
             android:layout_gravity="center"
             android:background="@color/white"
             android:headerBackground="@color/text_regular" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/color_picker_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/half_background"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:minWidth="250dp"
+            android:id="@+id/color_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/round_background"
+            android:padding="20dp">
+
+            <LinearLayout
+                android:id="@+id/new_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Pick a Color"
+                    android:textSize="16sp"
+                    android:textColor="@color/text_small"
+                    android:layout_marginBottom="10dp"/>
+
+                <GridLayout
+                    android:id="@+id/color_grid"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:columnCount="5"
+                    android:rowCount="2" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Category"
+                        android:textColor="@color/text_small"
+                        android:textSize="16sp"
+                        android:layout_marginBottom="5dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="20dp">
+
+                        <View
+                            android:id="@+id/color_block"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:background="@color/text_small"/>
+
+                        <EditText
+                            android:id="@+id/category_name"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="@color/text_small"
+                            android:layout_marginLeft="5dp"/>
+
+                    </LinearLayout>
+
+        </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/existing_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Existing Categories"
+                    android:textColor="@color/text_small"
+                    android:textSize="18sp"
+                    android:layout_marginBottom="10dp"/>
+
+                <Spinner
+                    android:id="@+id/category_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/category_spinner_item"
+                    android:layout_marginBottom="30dp"/>
+
+            </LinearLayout>
+
+            <android.widget.Button
+                android:id="@+id/save_category_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Done"
+                android:textColor="@color/background"
+                android:background="@drawable/layout_login_btn_bg"
+                android:layout_marginBottom="20dp"/>
+
+            <TextView
+                android:id="@+id/switch_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="New Category >"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:textColor="@color/text_small"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
