--- a/src/main/res/layout/task_listview_item.xml
+++ b/src/main/res/layout/task_listview_item.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
-    android:background="@color/transparent"
+    android:background="@drawable/task_item_round_bg"
     android:paddingLeft="10dp">
 
     <LinearLayout
@@ -51,8 +51,16 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="Username"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textColor="@color/text_small"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_marginRight="10dp"/>
+
+    <View
+        android:id="@+id/category_color"
+        android:layout_width="15dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="-10dp"
+        android:layout_marginBottom="-10dp"/>
 
 </LinearLayout>
