--- a/src/main/res/drawable/task_item_round_bg.xml
+++ b/src/main/res/drawable/task_item_round_bg.xml
@@ -1,6 +1,31 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/transparent"/>
-    <corners android:radius="10dp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
-</shape>
+<?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#00000000"/>
+            <corners android:radius="17dp" />
+        </shape>
+    </item>
+
+    <item
+        android:left="3dp"
+        android:right="3dp"
+        android:top="3dp"
+        android:bottom="3dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/white"/>
+            <corners android:radius="15dp" />
+        </shape>
+    </item>
+
+    <item android:gravity="right" android:width="20dp"
+        android:right="3dp"
+        android:top="3dp"
+        android:bottom="3dp">
+        <shape>
+            <solid android:color="@color/text_regular" />
+            <corners android:topRightRadius="15dp"
+                android:bottomRightRadius="15dp"/>
+        </shape>
+    </item>
+</layer-list>
