--- a/src/main/res/layout/main_group_tasks.xml
+++ b/src/main/res/layout/main_group_tasks.xml
@@ -116,7 +116,8 @@
                     android:layout_height="wrap_content"
                     android:scrollbars="none"
                     tools:listitem="@layout/task_listview_item"
-                    android:dividerHeight="8dp">
+                    android:divider="#00000000"
+                    android:dividerHeight="10dp">
 
                 </ListView>
 
