--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="background">#faf9f9</color>
+    <color name="background">#e5e5e5</color>
     <color name="text_regular">#2B2D42</color>
     <color name="text_small">#8D99AE</color>
     <color name="text_highlight">#EF233C</color>
