--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.MobileComputingGP" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:typeface">sans</item>
     </style>
 
     <style name="Theme.MobileComputingGP" parent="Base.Theme.MobileComputingGP" />
