--- a/src/main/res/layout/activity_chat.xml
+++ b/src/main/res/layout/activity_chat.xml
@@ -5,12 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ChatActivity">
+    tools:context=".activities.ChatActivity"
+    android:background="@color/background">
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:background="@color/background"
+       android:background="@color/text_highlight"
        android:padding="10dp"
        android:id="@+id/chattoolbar">
 
@@ -18,7 +19,7 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="group name"
-           android:textColor="@color/text_regular"
+           android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
