--- a/src/main/res/layout/main_user_profile.xml
+++ b/src/main/res/layout/main_user_profile.xml
@@ -34,14 +34,14 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"/>
 
-<!--            <TextView-->
-<!--                android:id="@+id/save_profile_btn"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Save"-->
-<!--                android:textSize="20sp"-->
-<!--                android:layout_gravity="bottom"-->
-<!--                android:textColor="@color/text_regular"/>-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/save_profile_btn"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="Save"-->
+            <!--                android:textSize="20sp"-->
+            <!--                android:layout_gravity="bottom"-->
+            <!--                android:textColor="@color/text_regular"/>-->
 
         </LinearLayout>
 
@@ -87,6 +87,23 @@
                 android:layout_height="match_parent"
                 android:background="#00000000"
                 android:text="Logout"
+                android:textColor="@color/text_regular" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:background="@drawable/layout_register_btn_bg"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center">
+
+            <Button
+                android:id="@+id/share_btn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#00000000"
+                android:text="Share"
                 android:textColor="@color/text_regular" />
 
         </LinearLayout>
