--- a/src/main/res/layout/auth_welcome.xml
+++ b/src/main/res/layout/auth_welcome.xml
@@ -41,9 +41,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TaskMaster"
-                android:textSize="36dp"
+                android:textSize="40dp"
                 android:textStyle="bold"
-                android:textColor="@color/text_highlight" />
+                android:textColor="@color/text_regular" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -60,14 +60,15 @@
                 android:background="@drawable/layout_welcome_btns_bg"
                 android:orientation="horizontal">
 
-                <Button
+                <android.widget.Button
                     android:id="@+id/welcome_signin_btn"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#00000000"
+                    android:layout_weight="0.9"
+                    android:background="@drawable/layout_login_btn_bg"
                     android:text="Sign In"
-                    android:textColor="@color/background" />
+                    android:textColor="@color/background"
+                    android:textAllCaps="false"/>
 
                 <Button
                     android:id="@+id/welcome_signup_btn"
